--- a/webapp-webapp/values.yaml
+++ b/webapp-webapp/values.yaml
@@ -20,6 +20,9 @@ base:
       kubernetes.io/ingress.class: "nginx"                           # аннотации
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
+    basicAuth:                                 # если используется basic авторизация, то ниже список хешей паролей
+      users:
+      - "osv:{SHA}$apr1$au8hUnIg$lLvPlUzc9BrQdXdT7vbxo."
 
     hosts:
       - host: ENV-webapp.cloudnative.space             # днс имя хоста, можно использовать шаблон ENV, который будет заменятся в каждой среде
